# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.227 2006/06/05 01:27:03 agaffney Exp $

  8 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/fe/gtk/RunInstall.py, src/fe/gtk/URIBrowser.py:
  remove extra print statements

*GLI-gtkfe-0.3 (11 Feb 2006)

  4 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
  add X of Y to FutureBar
  update Welcome.py help for install mode
  networkless support in Stage.py

  2 May 2006; Andrew Gaffney <agaffney@gentoo.org>
  added splashscreen

  10 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  check for partitions of 'unknown' type and warn user

  6 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  KEYMAP and CONSOLEFONT default to blank in OtherSettings.py

  5 Feb 2006; John N. Laliberte <allanonjl@gentoo.org>
  OtherSettings.py: Replacement for rc.conf screen.
  
  4 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  initial working help
  help text for Welcome
  add TextBufferMarkup.py

  30 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  if user doesn't add any interfaces for post-install, confirm

  13 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  add warning to ExtraPackages about fetch-restricted and interactive ebuilds

  7 Jan 2006; John N. Laliberte <allanonjl@gentoo.org>
  ExtraPackages.py: Fix bug where leaving and going back to a screen causes
  package to be listed twice.  add support for detecting GRP packages from
  grppkgs.txt on the livecd only if the grp checkbox is checked on the stage
  screen.  Add new property called 'DisplayName' to Package object for grp
  support.
  
  7 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  warn user when choosing the GRP option and not Dynamic
  load extra kernel args on Bootloader.py

  5 Jan 2006; John N. Laliberte <allanonjl@gentoo.org>
  Users.py: disable password fields if loading from profile, fix issue where