@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.227 2006/06/05 01:27:03 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.228 2006/06/24 21:38:18 agaffney Exp $
+
+  24 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/fe/gtk/Kernel.py:
+  remove bootsplash option
+  add custom kernel .config URI option
 
   8 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/fe/gtk/RunInstall.py, src/fe/gtk/URIBrowser.py:
